--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,3 +1,5 @@
+@import "~src/styles/variables";
+
 .navbar {
   padding: 20px;
   margin-bottom: 40px;
@@ -12,7 +14,7 @@
   margin-right: 30px;
   font-size: 30px;
   letter-spacing: 1px;
-  color: #F44336;
+  color: $main-color;
   font-weight: 500;
 }
 
@@ -21,13 +23,13 @@
 }
 
 .btn-bsw-search {
-  border-color: #F44336;
-  color: #F44336;
+  border-color: $main-color;
+  color: $main-color;
 
   &:hover, &:focus, &:active {
     background-color: transparent;
-    border-color: #F44336 !important;
-    color: #F44336 !important;
+    border-color: $main-color !important;
+    color: $main-color !important;
     box-shadow: none;
   }
 }
