--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import "styles/variables";
+
+html, body, p {
+  color: $main-text-color;
+}
+
+.apartment {
+  color: #a27da3;
+}
+
+.condo {
+  color: #d68000;
+}
+
+.house {
+color: #bf1818;
+}
