--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -5,8 +5,7 @@
                 <img src="{{rental.image}}" alt="">
             </div>
             <div class="col-md-6">
-                <!-- Will be replaced with map !!!! -->
-                <img src="{{rental.image}}" alt="">
+                <bsw-map [location]="rental.city + ', ' + rental.street"></bsw-map>
             </div>
         </div>
     </div>
