--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -43,7 +43,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4"> BOOKING</div>
+            <div class="col-md-4">
+                <bsw-rental-detail-booking [price]="rental.dailyRate"></bsw-rental-detail-booking>
+            </div>
         </div>
     </div>
 </section>
