--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,30 @@ html, body, p {
 .clickable {
   cursor: pointer;
 }
+
+.btn-bsw {
+  background-color: $main-color;
+  border-color: $main-color;
+  color: white;
+  padding: 15px 30px;
+  font-size: 20px !important;
+
+  &:hover, &:focus, &:active {
+    border-color: $main-color !important;
+    background-color: $main-color !important;
+  }
+}
+
+.bsw-form {
+  color: $main-color;
+
+  form {
+    margin-bottom: 10px;
+  }
+
+  .alert{
+    p{
+      margin: 0;
+    }
+  }
+}
