--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -44,7 +44,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <bsw-rental-detail-booking [price]="rental.dailyRate"></bsw-rental-detail-booking>
+                <bsw-rental-detail-booking
+                        [rental]="rental">
+                </bsw-rental-detail-booking>
             </div>
         </div>
     </div>
