--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,9 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" routerLink="/rentals">Buche mich</a>
-    <form class="form-inline">
-        <input class="form-control mr-sm-2 bsw-search" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0 btn-bsw-search" type="submit">Search</button>
-    </form>
+    <div class="form-inline">
+        <input #citySearch
+               (keyup.enter)="search(citySearch.value)"
+               class="form-control mr-sm-2 bsw-search"
+               type="search" placeholder="Search"
+               aria-label="Search">
+        <button (click)="search(citySearch.value)"
+                class="btn btn-outline-success my-2 my-sm-0 btn-bsw-search"
+                type="button">Search
+        </button>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,6 +29,15 @@
                 <li class="nav-item">
                     <a class="nav-link">{{authService.getUsername()}}</a>
                 </li>
+                <div class="nav-item dropdown clickable">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Benutzer Einstellungen
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a routerLink="/rentals/new" routerLinkActive="active" class="dropdown-item">Neue Wohnung</a>
+                    </div>
+                </div>
                 <li class="nav-item clickable">
                     <a class="nav-link" (click)="logout()">Logout</a>
                 </li>
