--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -1,26 +1,31 @@
 <div class="booking">
     <h3 class="booking-price">${{rental.dailyRate}} <span class="booking-per-night">per night</span></h3>
     <hr>
-    <form #bookingForm="ngForm">
-        <label>Dates</label>
-        <input type="text" class="form-control daterangepicker-input" name="daterangeInput" daterangepicker
-               [options]="options" (selected)="selectedDate($event, daterange)"
-        />
-        <div class="form-group">
-            <label for="guests">Guests</label>
-            <input [(ngModel)]="newBooking.guests"
-                   name="guests"
-                   type="number"
-                   class="form-control"
-                   id="guests"
-                   aria-describedby="emailHelp"
-                   required>
-        </div>
-        <button (click)="obenConfirmModal(content)"
-                [disabled]="bookingForm.form.invalid || !newBooking.startAt || !newBooking.endAt"
-                class="btn btn-danger btn-confirm btn-block">Reserve place now
-        </button>
-    </form>
+    <ng-container *ngIf="auth.isAuthenticated()">
+        <form #bookingForm="ngForm">
+            <label>Dates</label>
+            <input type="text" class="form-control daterangepicker-input" name="daterangeInput" daterangepicker
+                   [options]="options" (selected)="selectedDate($event, daterange)"
+            />
+            <div class="form-group">
+                <label for="guests">Guests</label>
+                <input [(ngModel)]="newBooking.guests"
+                       name="guests"
+                       type="number"
+                       class="form-control"
+                       id="guests"
+                       aria-describedby="emailHelp"
+                       required>
+            </div>
+            <button (click)="obenConfirmModal(content)"
+                    [disabled]="bookingForm.form.invalid || !newBooking.startAt || !newBooking.endAt"
+                    class="btn btn-danger btn-confirm btn-block">Reserve place now
+            </button>
+        </form>
+    </ng-container>
+    <div *ngIf="!auth.isAuthenticated()" class="should-login">
+        <button class="btn btn-bsw" routerLink="/login">Jetzt einloggen und diese Wohnung mieten</button>
+    </div>
     <hr>
     <p class="booking-note-title">People are interested into this house</p>
     <p class="booking-note-text">
