--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
@@ -4,6 +4,20 @@
   padding: 20px;
   border: 1px solid $light-gray-color;
 
+  .should-login {
+    text-align: center;
+    margin-bottom: 10px;
+
+    .btn-bsw {
+      font-size: 14px;
+      padding: 15px;
+
+      &:focus, &:hover {
+        color: white;
+      }
+    }
+  }
+
   .btn-confirm {
     background-color: #FF5A5F;
     font-size: 17px;
@@ -65,6 +79,10 @@ p {
 
 .daterangepicker {
   td {
+    &.in-range {
+      background-color: #ffa9a9 !important;
+    }
+
     &.active {
       background-color: $main-color !important;
 
