--- a/src/app/rental/rental-detail/rental-detail.component.scss
+++ b/src/app/rental/rental-detail/rental-detail.component.scss
@@ -12,12 +12,30 @@
   .details-section {
     //color: $main-text-color;
     color: black;
+
     .rental {
       &-type {
         font-size: 14px;
         font-weight: 300;
         text-transform: uppercase;
         margin: 0;
+      }
+
+      &-owner {
+        float: right;
+
+        img {
+          height: 50px;
+          border-radius: 50%;
+          display: block;
+          margin: 0 auto;
+        }
+
+        span {
+          display: block;
+          font-size: 13px;
+          font-weight: 300;
+        }
       }
 
       &-title {
