--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,12 @@ html, body, p {
   color: #bf1818;
 }
 
+.page-title {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
 .clickable {
   cursor: pointer;
 }
@@ -42,9 +48,56 @@ html, body, p {
     margin-bottom: 10px;
   }
 
-  .alert{
-    p{
+  .alert {
+    p {
       margin: 0;
     }
+  }
+}
+
+.bwm-form {
+  color: $main-text-color;
+
+  form {
+    margin-bottom: 10px;
+  }
+
+  .alert {
+    p {
+      margin: 0;
+    }
+  }
+
+  h1 {
+    font-weight: 700;
+    margin-bottom: 30px;
+  }
+
+  .image-container {
+    position: relative;
+
+    img {
+      width: 100%;
+      border-radius: 5px;
+    }
+  }
+
+  label {
+    font-size: 16px;
+  }
+
+  .form-text {
+    font-size: 17px;
+  }
+
+  .catchphrase {
+    text-align: center;
+    font-size: 42px;
+    position: absolute;
+    color: #f1f1f1;
+    padding: 40px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 50px;
+    letter-spacing: 1px;
   }
 }
