--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -16,6 +16,12 @@
   letter-spacing: 1px;
   color: $main-color;
   font-weight: 500;
+
+  img {
+    margin-top: 15px;
+    height: 20px;
+  }
+
   &.active, &:hover, &:focus {
     color: $main-color;
   }
