--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -2,7 +2,7 @@
     <div class="upper-section">
         <div class="row">
             <div class="col-md-6">
-                <img src="{{rental.image}}" alt="">
+                <img src="{{rental.image}}" alt="Rental Image">
             </div>
             <div class="col-md-6">
                 <bsw-map [location]="rental.city + ', ' + rental.street"></bsw-map>
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="rental">
-                    <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Shared' : 'Whole'}} {{rental.category}}</h2>
+                    <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Geteiltes' : 'Ganzes'}} {{rental.category}}</h2>
                     <div class="rental-owner">
                         <img src="https://api.adorable.io/avatars/285/abott@adorable.png" alt="User">
                         <span>{{rental.user.username}}</span>
@@ -23,16 +23,16 @@
                     <h1 class="rental-title">{{rental.title}}</h1>
                     <h2 class="rental-city">{{rental.city | ucwords}}</h2>
                     <div class="rental-room-info">
-                        <span><i class="fa fa-building"></i>{{rental.bedrooms}} bedrooms</span>
-                        <span><i class="fa fa-user"></i> {{rental.bedrooms + 4}} guests</span>
-                        <span><i class="fa fa-bed"></i> {{rental.bedrooms + 2}} beds</span>
+                        <span><i class="fa fa-building"></i>{{rental.bedrooms}} Schlafzimmer</span>
+                        <span><i class="fa fa-user"></i> {{rental.bedrooms * 2}} Gäste</span>
+                        <span><i class="fa fa-bed"></i> {{rental.bedrooms * 2}} Betten</span>
                     </div>
                     <p class="rental-description">
                         {{rental.description}}
                     </p>
                     <hr>
                     <div class="rental-assets">
-                        <h3 class="title">Assets</h3>
+                        <h3 class="title">Zubehör</h3>
                         <div class="row">
                             <div class="col-md-6">
                                 <span><i class="fa fa-asterisk"></i> Cooling</span>
