--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,12 +28,24 @@ html, body, p {
   cursor: pointer;
 }
 
+.btn-ghost {
+  background-color: transparent !important;
+  color: $main-color !important;
+  border: 1px solid $main-color !important;
+  font-size: 12px !important;
+
+  &:hover {
+    background-color: $main-color !important;
+    color: white !important;
+  }
+}
+
 .btn-bsw {
   background-color: $main-color;
   border-color: $main-color;
   color: white;
   padding: 15px 30px;
-  font-size: 20px !important;
+  font-size: 20px;
 
   &:hover, &:focus, &:active {
     border-color: $main-color !important;
