ADD pre-deploy setup

--- a/src/app/manage/manage-rental/manage-rental-booking/manage-rental-booking.component.html
+++ b/src/app/manage/manage-rental/manage-rental-booking/manage-rental-booking.component.html
@@ -1,5 +1,5 @@
 <button (click)="modalService.open(bookingModal)" class="btn m-2 btn-ghost">Zeige Buchungen
-</button> <!-- Click event to open modal, dont forget to inject modal service in .ts file -->
+</button>
 
 <ng-template #bookingModal let-c="close" let-d="dismiss">
     <div class="modal-header">
