--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,15 +6,15 @@ html, body, p {
   color: $main-text-color;
 }
 
-.apartment {
+.apartement {
   color: #a27da3;
 }
 
-.condo {
+.wohnung {
   color: #d68000;
 }
 
-.house {
+.haus {
   color: #bf1818;
 }
 
