--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="rental">
-                    <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Geteiltes' : 'Ganzes'}} {{rental.category}}</h2>
+                    <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Geteilt' : 'Total'}} {{rental.category}}</h2>
                     <div class="rental-owner">
                         <img src="https://api.adorable.io/avatars/285/abott@adorable.png" alt="User">
                         <span>{{rental.user.username}}</span>
